Made it possible to give tips a custom identifier (default is controller#actions) in order to allow multiple tips per controller/action pair. e.g. if a view requires different tips based on a param.

--- a/app/views/help_tips/_help_tip.html.erb
+++ b/app/views/help_tips/_help_tip.html.erb
@@ -1,4 +1,4 @@
-<div class="help_tip alert alert-info alert-help" data-tip-controller="<%= params[:controller] %>" data-tip-action="<%= params[:action] %>">
+<div class="help_tip alert alert-info alert-help" data-tip-identifier="<%= identifier %>">
   <a class="close" data-dismiss="alert" href="#">&times;</a>
   <h3 class='title'><%= title %></h3>
   <p><%= body %></p>
