Made if possible to specify a footer.

--- a/app/views/help_tips/_help_modal.html.erb
+++ b/app/views/help_tips/_help_modal.html.erb
@@ -6,6 +6,6 @@
     <p><%= body %></p>
   </div>
   <div class="modal-footer">
-    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <%= footer || link_to('Close', '#', :class => 'btn', 'data-dismiss' => 'modal') %>
   </div>
 </div>
