--- a/app/views/help_tips/_help_tip.html.erb
+++ b/app/views/help_tips/_help_tip.html.erb
@@ -1,5 +1,5 @@
 <div class="help_tip alert alert-info alert-help" data-tip-identifier="<%= identifier %>">
   <a class="close" data-dismiss="alert" href="#">&times;</a>
-  <h3 class='title'><%= title %></h3>
+  <%= content_tag :h3, title, :class => 'title' if title.present? %>
   <p><%= body %></p>
 </div>
