--- a/app/views/help_tips/_help_modal.html.erb
+++ b/app/views/help_tips/_help_modal.html.erb
@@ -3,7 +3,7 @@
     <h3><%= title || 'Help' %></h3>
   </div>
   <div class="modal-body">
-    <p><%= body %></p>
+    <%= body %>
   </div>
   <div class="modal-footer">
     <%= footer || link_to('Close', '#', :class => 'btn', 'data-dismiss' => 'modal') %>
